--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,13 @@
         tools:targetApi="31">
         <activity
             android:name=".MainActivity"
+            android:exported="false"
             android:screenOrientation="landscape"
-            android:exported="true">
+            android:parentActivityName=".StartActivity"/>
+        <activity
+            android:name=".StartActivity"
+            android:exported="true"
+            android:screenOrientation="landscape">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
